单个手势页面及用例
Signed-off-by: zhang-quanchao <zhangquanchao@huawei.com>

--- a/code/DocsSample/ArkUISample/StateStyle/AppScope/app.json5
+++ b/code/DocsSample/ArkUISample/StateStyle/AppScope/app.json5
@@ -12,15 +12,13 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
 {
-  "module": {
-    "name": "entry_test",
-    "type": "feature",
-    "deviceTypes": [
-      "default"
-    ],
-    "deliveryWithInstall": true,
-    "installationFree": false
+  "app": {
+    "bundleName": "com.example.StateStyle",
+    "vendor": "example",
+    "versionCode": 1000000,
+    "versionName": "1.0.0",
+    "icon": "$media:layered_image",
+    "label": "$string:app_name"
   }
 }
