--- a/code/DocsSample/ArkUISample/ComponentsLayout/entry/src/main/module.json5
+++ b/code/DocsSample/ArkUISample/ComponentsLayout/entry/src/main/module.json5
@@ -4,9 +4,7 @@
     "type": "entry",
     "description": "$string:module_desc",
     "mainElement": "EntryAbility",
-    "deviceTypes": [
-      "default"
-    ],
+    "deviceTypes": [],
     "deliveryWithInstall": true,
     "installationFree": false,
     "pages": "$profile:main_pages",
