--- a/code/DocsSample/ArkUISample/UIContext/entry/src/ohosTest/module.json5
+++ b/code/DocsSample/ArkUISample/UIContext/entry/src/ohosTest/module.json5
@@ -17,9 +17,7 @@
   "module": {
     "name": "entry_test",
     "type": "feature",
-    "deviceTypes": [
-
-    ],
+    "deviceTypes": [],
     "deliveryWithInstall": true,
     "installationFree": false
   }
