IssueNo: #6621 Description:  sample仓同源：创建Native子进程（C/C++） Sig: SIG_Sample Feature or Bugfix: Feature Binary Source: No
Signed-off-by: lvyabo <tianlong18@h-partners.com>

--- a/code/DocsSample/Ability/NativeChildProcessParams/AppScope/app.json5
+++ b/code/DocsSample/Ability/NativeChildProcessParams/AppScope/app.json5
@@ -15,7 +15,7 @@
 
 {
   "app": {
-    "bundleName": "com.example.nativechildprocessparams",
+    "bundleName": "com.sample.nativechildprocessparams",
     "vendor": "example",
     "versionCode": 1000000,
     "versionName": "1.0.0",
