--- a/code/DocsSample/Ability/NativeChildProcessIpc/AppScope/app.json5
+++ b/code/DocsSample/Ability/NativeChildProcessIpc/AppScope/app.json5
@@ -15,7 +15,7 @@
 
 {
   "app": {
-    "bundleName": "com.example.nativechildprocessipc",
+    "bundleName": "com.sample.nativechildprocessipc",
     "vendor": "example",
     "versionCode": 1000000,
     "versionName": "1.0.0",
