IssueNo: #6595:检查页面布局指南Sample同源doc Description: 检查页面布局指南Sample同源doc Sig: SIG_Sample Feature or Bugfix: Feature Binary Source: No
Signed-off-by: qinjianping001 <tianlong18@h-partners.com>

--- a/code/DocsSample/ArkUISample/checkpage/AppScope/app.json5
+++ b/code/DocsSample/ArkUISample/checkpage/AppScope/app.json5
@@ -14,7 +14,7 @@
  */
 {
   "app": {
-    "bundleName": "com.sample.checkpage",
+    "bundleName": "com.samples.checkpage",
     "vendor": "example",
     "versionCode": 1000000,
     "versionName": "1.0.0",
