--- a/code/DocsSample/ArkUISample/NdkInputEvent/build-profile.json5
+++ b/code/DocsSample/ArkUISample/NdkInputEvent/build-profile.json5
@@ -20,9 +20,9 @@
       {
         "name": "default",
         "signingConfig": "default",
-        "targetSdkVersion": "20",
-        "compileSdkVersion": 20,
-        "compatibleSdkVersion": 20,
+        "targetSdkVersion": 22,
+        "compileSdkVersion": 22,
+        "compatibleSdkVersion": 22,
         "runtimeOS": "OpenHarmony",
         "buildOption": {
           "strictMode": {
