--- a/code/DocsSample/Ability/InsightIntentUIAbility/entry/src/ohosTest/module.json5
+++ b/code/DocsSample/Ability/InsightIntentUIAbility/entry/src/ohosTest/module.json5
@@ -17,6 +17,7 @@
     "name": "entry_test",
     "type": "feature",
     "deviceTypes": [
+      "default"
     ],
     "deliveryWithInstall": true,
     "installationFree": false
