add samples labs
Signed-off-by: liqianqian4 <liqianqian43@huawei.com>

--- a/code/DocsSample/graphic/DisplaySoloist/entry/src/main/cpp/CMakeLists.txt
+++ b/code/DocsSample/graphic/DisplaySoloist/entry/src/main/cpp/CMakeLists.txt
@@ -20,4 +20,6 @@ find_library(
     hilog_ndk.z
 )
 target_link_libraries(entry PUBLIC ${hilog-lib})
+#// [Start display_soloist_add_lib]
 target_link_libraries(entry PUBLIC libace_napi.z.so libnative_drawing.so libnative_window.so libace_ndk.z.so libnative_display_soloist.so)
+#// [End display_soloist_add_lib]
