IssueNo: #6510:新增工程FormLiveDemo和JSForm Description: 新增FORM中场景动效类型互动卡片开发指导工程FormLiveDemo和JS 卡片开发指导（Stage 模型）工程JSForm Sig: SIG_Sample Feature or Bugfix: Feature Binary Source: No
Signed-off-by: niuyongqing <tianlong18@h-partners.com>

--- a/code/DocsSample/Form/JSForm/entry/src/main/module.json5
+++ b/code/DocsSample/Form/JSForm/entry/src/main/module.json5
@@ -53,7 +53,7 @@
     "extensionAbilities": [
       {
         "name": "JsCardFormAbility",
-        "srcEntry": "./ets/jscardformability/JsCardFormAbility.ts",
+        "srcEntry": "./ets/jscardformability/JsCardFormAbility.ets",
         "description": "$string:JSCardFormAbility_desc",
         "label": "$string:JSCardFormAbility_label",
         "type": "form",
