--- a/code/DocsSample/ArkUISample/Navigation/entry/src/main/module.json5
+++ b/code/DocsSample/ArkUISample/Navigation/entry/src/main/module.json5
@@ -19,7 +19,7 @@
     "description": "$string:module_desc",
     "mainElement": "EntryAbility",
     "deviceTypes": [
-
+      "default"
     ],
     "deliveryWithInstall": true,
     "installationFree": false,
