--- a/code/BasicFeature/Connectivity/VPN/entry/src/main/module.json5
+++ b/code/BasicFeature/Connectivity/VPN/entry/src/main/module.json5
@@ -28,7 +28,7 @@
     "pages": "$profile:main_pages",
     "requestPermissions": [
       {
-        "name": "ohos.permission.INTERNET"
+        "name": "ohos.permission.MANAGE_VPN"
       }
     ],
     "abilities": [
