update: 更新文件 module.json5
Signed-off-by: gcw_RYdx6Zzw <zhongjie35@huawei.com>

--- a/code/SystemFeature/Security/DLP/entry/src/main/module.json5
+++ b/code/SystemFeature/Security/DLP/entry/src/main/module.json5
@@ -36,16 +36,19 @@
         "startWindowIcon": "$media:icon",
         "startWindowBackground": "$color:start_window_background",
         "exported": true,
+        // [Start dlp_configurationModule]
         "skills": [
           {
             "entities": [
               "entity.system.home"
             ],
             "actions": [
-              "action.system.home"
+              "action.system.home",
+              "ohos.want.action.viewData"
             ]
           }
         ]
+        // [End dlp_configurationModule]
       }
     ],
     "requestPermissions": [
