--- a/code/DocsSample/ArkUISample/UIContext/AppScope/app.json5
+++ b/code/DocsSample/ArkUISample/UIContext/AppScope/app.json5
@@ -15,7 +15,7 @@
 
 {
   "app": {
-    "bundleName": "com.sample.UIContext",
+    "bundleName": "com.samples.UIContext",
     "vendor": "example",
     "versionCode": 1000000,
     "versionName": "1.0.0",
