--- a/code/DocsSample/ArkUISample/ButtonAttribute/build-profile.json5
+++ b/code/DocsSample/ArkUISample/ButtonAttribute/build-profile.json5
@@ -15,7 +15,9 @@
 
 {
   "app": {
-    "signingConfigs": [],
+    "signingConfigs": [
+
+    ],
     "products": [
       {
         "name": "default",
