--- a/code/DocsSample/ArkUISample/ButtonAttribute/entry/src/ohosTest/module.json5
+++ b/code/DocsSample/ArkUISample/ButtonAttribute/entry/src/ohosTest/module.json5
@@ -18,7 +18,8 @@
     "name": "entry_test",
     "type": "feature",
     "deviceTypes": [
-
+      "default",
+      "phone"
     ],
     "deliveryWithInstall": true,
     "installationFree": false
