--- a/code/DocsSample/ArkUISample/FrameNode/entry/src/ohosTest/module.json5
+++ b/code/DocsSample/ArkUISample/FrameNode/entry/src/ohosTest/module.json5
@@ -17,7 +17,10 @@
   "module": {
     "name": "entry_test",
     "type": "feature",
-    "deviceTypes": [],
+    "deviceTypes": [
+      "default",
+      "tablet"
+    ],
     "deliveryWithInstall": true,
     "installationFree": false
   }
