IssueNo: #6589: 新增：sample仓同源doc仓：使用装饰器开发意图 Description:  新增：sample仓同源doc仓：使用装饰器开发意图 Sig: SIG_Sample Feature or Bugfix: Feature Binary Source: No
Signed-off-by: lvyabo <tianlong18@h-partners.com>

--- a/code/DocsSample/Ability/OrnamentIntent/feature/src/ohosTest/module.json5
+++ b/code/DocsSample/Ability/OrnamentIntent/feature/src/ohosTest/module.json5
@@ -17,9 +17,7 @@
   "module": {
     "name": "feature_test",
     "type": "feature",
-    "deviceTypes": [
-      "default"
-    ],
+    "deviceTypes": [],
     "deliveryWithInstall": true,
     "installationFree": false
   }
