IssueNo: https://gitcode.com/openharmony/applications_app_samples/issues/6657 Description: 添加使用Web组件显示网页弹框指南、使用Web组件的拖拽功能与网页交互指南的代码片段 Sig: SIG_Sample Feature or Bugfix: Feature Binary Source: No
Signed-off-by: huyingtao <tianlong18@h-partners.com>

--- a/code/DocsSample/ArkWeb/ShowWebPageDialog/entry2/src/main/module.json5
+++ b/code/DocsSample/ArkWeb/ShowWebPageDialog/entry2/src/main/module.json5
@@ -18,7 +18,9 @@
     "type": "feature",
     "description": "$string:module_desc",
     "mainElement": "Entry2Ability",
-    "deviceTypes": [],
+    "deviceTypes": [
+      "default"
+    ],
     "deliveryWithInstall": true,
     "installationFree": false,
     "pages": "$profile:main_pages",
