IssueNo: #6547: 新增：git status语法：双向绑定的工程ArkUI_Binding Description:  新增：git status语法：双向绑定的工程ArkUI_Binding Sig: SIG_Sample Feature or Bugfix: Feature Binary Source: No
Signed-off-by: niuyongqing <tianlong18@h-partners.com>

--- a/code/DocsSample/ArkUISample/ArkUI_Binding/AppScope/app.json5
+++ b/code/DocsSample/ArkUISample/ArkUI_Binding/AppScope/app.json5
@@ -13,14 +13,12 @@
  * limitations under the License.
  */
 {
-  "module": {
-    "name": "entry_test",
-    "type": "feature",
-    "deviceTypes": [
-      "default",
-      "tablet"
-    ],
-    "deliveryWithInstall": true,
-    "installationFree": false
+  "app": {
+    "bundleName": "com.samples.binding",
+    "vendor": "example",
+    "versionCode": 1000000,
+    "versionName": "1.0.0",
+    "icon": "$media:layered_image",
+    "label": "$string:app_name"
   }
 }
