IssueNo: #6732: 同应用进程嵌入式组件、支持无障碍、自定义绘制等Sample同源Doc Description: 同应用进程嵌入式组件、支持无障碍、自定义绘制等 Sig: SIG_Sample Feature or Bugfix: Feature Binary Source: No
Signed-off-by: qinjianping <tianlong18@h-partners.com>

--- a/code/DocsSample/ArkUISample/UIExtensionAndAccessibility/entry/oh-package.json5
+++ b/code/DocsSample/ArkUISample/UIExtensionAndAccessibility/entry/oh-package.json5
@@ -20,6 +20,8 @@
   "main": "",
   "author": "",
   "license": "",
-  "dependencies": {}
+  "dependencies": {
+    "libentry.so": "file:./src/main/cpp/types/libentry"
+  }
 }
 
