--- a/code/DocsSample/ArkUISample/UIExtensionAndAccessibility/entry/src/mock/mock-config.json5
+++ b/code/DocsSample/ArkUISample/UIExtensionAndAccessibility/entry/src/mock/mock-config.json5
@@ -12,6 +12,8 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
 {
+  "libentry.so": {
+    "source": "src/mock/Libentry.mock.ets"
+  }
 }
