--- a/code/DocsSample/ArkUISample/ParadigmStateManagement/AppScope/app.json5
+++ b/code/DocsSample/ArkUISample/ParadigmStateManagement/AppScope/app.json5
@@ -14,7 +14,7 @@
  */
 {
   "app": {
-    "bundleName": "com.samples.componentextension",
+    "bundleName": "com.samples.paradigmstatemanagement",
     "vendor": "example",
     "versionCode": 1000000,
     "versionName": "1.0.0",
