--- a/code/DocsSample/ArkUISample/GestureGroup/AppScope/app.json5
+++ b/code/DocsSample/ArkUISample/GestureGroup/AppScope/app.json5
@@ -14,8 +14,8 @@
  */
 {
   "app": {
-    "bundleName": "com.example.gesturegroup",
-    "vendor": "example",
+    "bundleName": "com.samples.gesturegroup",
+    "vendor": "samples",
     "versionCode": 1000000,
     "versionName": "1.0.0",
     "icon": "$media:layered_image",
