修复和新增Samples Ability中的标签
Signed-off-by: tianlongdevcode <tianlong18@h-partners.com>

--- a/code/DocsSample/Ability/StartAbility/entry/src/main/module.json5
+++ b/code/DocsSample/Ability/StartAbility/entry/src/main/module.json5
@@ -12,9 +12,25 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
- 
+
+// [Start file_config]
+// [Start photo_config]
+// [Start mailto_config]
+// [Start express_config]
+// [Start finance_config]
+// [Start flight_config]
+// [Start mail_config]
+// [Start navitation_config]
 {
   "module": {
+    // [StartExclude file_config]
+    // [StartExclude photo_config]
+    // [StartExclude mailto_config]
+    // [StartExclude express_config]
+    // [StartExclude finance_config]
+    // [StartExclude flight_config]
+    // [StartExclude mail_config]
+    // [StartExclude navitation_config]
     "name": "entry",
     "type": "entry",
     "description": "$string:module_desc",
@@ -25,7 +41,21 @@
     "deliveryWithInstall": true,
     "installationFree": false,
     "pages": "$profile:main_pages",
+    // [EndExclude file_config]
+    // [EndExclude mailto_config]
+    // [EndExclude express_config]
+    // [EndExclude finance_config]
+    // [EndExclude flight_config]
+    // [EndExclude mail_config]
+    // [EndExclude navitation_config]
     "abilities": [
+      // [StartExclude file_config]
+      // [StartExclude mailto_config]
+      // [StartExclude express_config]
+      // [StartExclude finance_config]
+      // [StartExclude flight_config]
+      // [StartExclude mail_config]
+      // [StartExclude navitation_config]
       {
         "name": "StartAbilityEntry",
         "srcEntry": "./ets/entryability/StartAbilityEntry.ets",
@@ -46,7 +76,9 @@
           }
         ]
       },
+      // [EndExclude navitation_config]
       {
+        // [StartExclude navitation_config]
         "name": "NavigationAbility",
         "srcEntry": "./ets/entryability/NavigationAbility.ets",
         "description": "$string:EntryAbility_desc",
@@ -55,91 +87,77 @@
         "startWindowIcon": "$media:startIcon",
         "startWindowBackground": "$color:start_window_background",
         "exported": true,
-        // [Start navigation_config]
+        // [EndExclude navitation_config]
         "skills": [
           {
-            // [StartExclude navigation_entry]
             "entities": [
               "entity.system.home"
             ],
             "actions": [
               "ohos.want.action.home"
             ],
-            // [EndExclude navigation_entry]
             "uris": [
               {
-                "scheme": "maps",
+                "scheme": "maps", // 这里仅示意，应用需确保这里声明的uri能被外部正常拉起
                 "host": "navigation",
                 "path": "",
-                "linkFeature": "Navigation"
+                "linkFeature": "Navigation" // 声明应用支持导航功能
               },
               {
-                "scheme": "maps",
+                "scheme": "maps", // 这里仅示意，应用需确保这里声明的uri能被外部正常拉起
                 "host": "routePlan",
                 "path": "",
-                "linkFeature": "RoutePlan"
+                "linkFeature": "RoutePlan" // 声明应用支持路线规划功能
               },
               {
-                "scheme": "maps",
+                "scheme": "maps", // 这里仅示意，应用需确保这里声明的uri能被外部正常拉起
                 "host": "search",
                 "path": "",
-                "linkFeature": "PlaceSearch"
-              },
-              {
-              "scheme": "maps", // 这里仅示意，应用需确保这里声明的uri能被外部正常拉起
-              "host": "navigation",
-              "path": "",
-              "linkFeature": "Navigation" // 声明应用支持导航功能
-              },
-              {
-              "scheme": "maps", // 这里仅示意，应用需确保这里声明的uri能被外部正常拉起
-              "host": "routePlan",
-              "path": "",
-              "linkFeature": "RoutePlan" // 声明应用支持路线规划功能
-              },
-              {
-              "scheme": "maps", // 这里仅示意，应用需确保这里声明的uri能被外部正常拉起
-              "host": "search",
-              "path": "",
-              "linkFeature": "PlaceSearch" // 声明应用支持位置搜索功能
+                "linkFeature": "PlaceSearch" // 声明应用支持位置搜索功能
               }
             ]
           }
         ]
-        // [End navigation_config]
       },
+      // [EndExclude mail_config]
+      // [StartExclude navitation_config]
       {
+        // [StartExclude mail_config]
         "name": "MailAbility",
         "srcEntry": "./ets/entryability/MailAbility.ets",
         "description": "$string:EntryAbility_desc",
         "icon": "$media:layered_image",
         "label": "$string:Mail_label",
         "exported": true,
-        // [Start email_config]
+        // [EndExclude mail_config]
         "skills": [
           {
             "uris": [
               {
-              "scheme": "mailto", // 这里仅示意，应用需确保这里声明的uri能被外部正常拉起
-              "host": "",
-              "path": "",
-              "linkFeature": "ComposeMail" // 声明应用支持撰写邮件功能
+                "scheme": "mailto", // 这里仅示意，应用需确保这里声明的uri能被外部正常拉起
+                "host": "",
+                "path": "",
+                "linkFeature": "ComposeMail" // 声明应用支持撰写邮件功能
               }
             ]
           }
         ],
-        // [End email_config]
+        // [StartExclude mail_config]
         "startWindowIcon": "$media:startIcon",
-        "startWindowBackground": "$color:start_window_background"
+        "startWindowBackground": "$color:start_window_background",
+        // [EndExclude mail_config]
       },
+      // [EndExclude mailto_config]
+      // [StartExclude mail_config]
       {
+        // [StartExclude mailto_config]
         "name": "MailtoAbility",
         "srcEntry": "./ets/entryability/MailtoAbility.ets",
         "description": "$string:MailtoAbility_label",
         "icon": "$media:layered_image",
         "label": "$string:MailtoAbility_label",
         "exported": true,
-        // [Start mailto_config]
+        // [EndExclude mailto_config]
         "skills": [
           {
             "actions": [
@@ -154,54 +172,60 @@
             ]
           }
         ],
-        // [End mailto_config]
+        // [StartExclude mailto_config]
         "startWindowIcon": "$media:startIcon",
-        "startWindowBackground": "$color:start_window_background"
+        "startWindowBackground": "$color:start_window_background",
+        // [EndExclude mailto_config]
       },
+      // [StartExclude mailto_config]
+      // [EndExclude finance_config]
       {
+        // [StartExclude finance_config]
         "name": "FinanceAbility",
         "srcEntry": "./ets/entryability/FinanceAbility.ets",
         "description": "$string:FinanceAbility_desc",
         "icon": "$media:layered_image",
         "label": "$string:FinanceAbility_label",
         "exported": true,
-        // [Start finance_config]
+        // [EndExclude finance_config]
         "skills": [
           {
             "actions": ["ohos.want.action.viewData"],
             "uris": [
               {
-              "scheme": "finance", // 这里仅示意，应用需确保这里声明的uri能被外部正常拉起
-              "host": "transfer",
-              "path": "",
-              "linkFeature": "Transfer" // 声明应用支持转账汇款功能
+                "scheme": "finance", // 这里仅示意，应用需确保这里声明的uri能被外部正常拉起
+                "host": "transfer",
+                "path": "",
+                "linkFeature": "Transfer" // 声明应用支持转账汇款功能
               },
               {
-              "scheme": "finance", // 这里仅示意，应用需确保这里声明的uri能被外部正常拉起
-              "host": "credit_card_repayment",
-              "path": "",
-              "linkFeature": "CreditCardRepayment" // 声明应用支持信用卡还款功能
+                "scheme": "finance", // 这里仅示意，应用需确保这里声明的uri能被外部正常拉起
+                "host": "credit_card_repayment",
+                "path": "",
+                "linkFeature": "CreditCardRepayment" // 声明应用支持信用卡还款功能
               }
             ]
           }
         ],
-        // [End finance_config]
+        // [StartExclude finance_config]
         "startWindowIcon": "$media:startIcon",
-        "startWindowBackground": "$color:start_window_background"
+        "startWindowBackground": "$color:start_window_background",
+        // [EndExclude finance_config]
       },
+      // [StartExclude finance_config]
+      // [EndExclude flight_config]
       {
+        // [StartExclude flight_config]
         "name": "FlightAbility",
         "srcEntry": "./ets/entryability/FlightAbility.ets",
         "description": "$string:FlightAbility_desc",
         "icon": "$media:layered_image",
         "label": "$string:FlightAbility_label",
         "exported": true,
-        // [Start flight_config]
+        // [EndExclude flight_config]
         "skills": [
           {
-            // [StartExclude flight_ignore]
             "actions": ["ohos.want.action.viewData"],
-            // [EndExclude flight_ignore]
             "uris": [
               {
                 "scheme": "flight",
@@ -218,23 +242,23 @@
             ]
           }
         ],
-        // [End flight_config]
         "startWindowIcon": "$media:startIcon",
         "startWindowBackground": "$color:start_window_background"
       },
+      // [EndExclude express_config]
+      // [StartExclude flight_config]
       {
+        // [StartExclude express_config]
         "name": "ExpressAbility",
         "srcEntry": "./ets/entryability/ExpressAbility.ets",
         "description": "$string:ExpressAbility_desc",
         "icon": "$media:layered_image",
         "label": "$string:ExpressAbility_label",
         "exported": true,
-        // [Start express_config]
+        // [EndExclude express_config]
         "skills": [
           {
-            // [StartExclude express_ignore]
             "actions": ["ohos.want.action.viewData"],
-            // [EndExclude express_ignore]
             "uris": [
               {
                 "scheme": "express",
@@ -245,10 +269,12 @@
             ]
           }
         ],
-        // [End express_config]
+        // [StartExclude express_config]
         "startWindowIcon": "$media:startIcon",
-        "startWindowBackground": "$color:start_window_background"
+        "startWindowBackground": "$color:start_window_background",
+        // [EndExclude express_config]
       },
+      // [StartExclude express_config]
       {
         "name": "FileCallerAbility",
         "srcEntry": "./ets/entryability/FileCallerAbility.ets",
@@ -265,21 +291,23 @@
         "startWindowIcon": "$media:startIcon",
         "startWindowBackground": "$color:start_window_background"
       },
+      // [EndExclude file_config]
       {
+		// [StartExclude file_config]
         "name": "FileHandlerAbility",
         "srcEntry": "./ets/entryability/FileHandlerAbility.ets",
         "description": "$string:FileAbility_desc",
         "icon": "$media:layered_image",
         "label": "$string:FileAbility_label",
         "exported": true,
-        // [Start file_config]
+		// [EndExclude file_config]
         "skills": [
-          // [StartExclude file_ignore]
+          // [StartExclude file_config]
           {
             "entities": ["entity.system.home"],
             "actions": ["ohos.want.action.home"]
           },
-          // [EndExclude file_ignore]
+          // [EndExclude file_config]
           {
             "actions": [
               "ohos.want.action.viewData" // 必填，声明数据处理能力
@@ -294,12 +322,26 @@
             ],
           }
         ],
-        // [End file_config]
+        // [StartExclude file_config]
         "startWindowIcon": "$media:startIcon",
-        "startWindowBackground": "$color:start_window_background"
+        "startWindowBackground": "$color:start_window_background",
+        // [EndExclude file_config]
       }
+      // [EndExclude mailto_config]
+      // [EndExclude express_config]
+      // [EndExclude finance_config]
+      // [EndExclude flight_config]
+      // [EndExclude mail_config]
+      // [EndExclude navitation_config]
     ],
-    // [Start photo_edit_config]
+	// [StartExclude file_config]
+    // [EndExclude photo_config]
+    // [StartExclude mailto_config]
+    // [StartExclude express_config]
+    // [StartExclude finance_config]
+    // [StartExclude flight_config]
+    // [StartExclude mail_config]
+    // [StartExclude navitation_config]
     "extensionAbilities": [
       {
         "name": "ExamplePhotoEditorAbility",
@@ -312,6 +354,20 @@
         "extensionProcessMode": "bundle"
       }
     ],
-    // [End photo_edit_config]
+	// [EndExclude file_config]
+    // [EndExclude mailto_config]
+    // [EndExclude express_config]
+    // [EndExclude finance_config]
+    // [EndExclude flight_config]
+    // [EndExclude mail_config]
+    // [EndExclude navitation_config]
   }
 }
+// [End file_config]
+// [End photo_config]
+// [End mailto_config]
+// [End express_config]
+// [End finance_config]
+// [End flight_config]
+// [End mail_config]
+// [End navitation_config]
