--- a/code/DocsSample/ArkUISample/ComponentsLayout/AppScope/app.json5
+++ b/code/DocsSample/ArkUISample/ComponentsLayout/AppScope/app.json5
@@ -1,6 +1,6 @@
 {
   "app": {
-    "bundleName": "com.example.customcompontslayout",
+    "bundleName": "com.samples.customcompontslayout",
     "vendor": "example",
     "versionCode": 1000000,
     "versionName": "1.0.0",
