IssueNo: #6738:组件导航(Navigation) (推荐)示例代码同源 Description: 组件导航(Navigation) (推荐)示例代码同源 Sig: SIG_Sample Feature or Bugfix: Feature Binary Source: No
Signed-off-by: xiexiangyu002 <tianlong18@h-partners.com>

--- a/code/DocsSample/ArkUISample/NavigationSample/AppScope/app.json5
+++ b/code/DocsSample/ArkUISample/NavigationSample/AppScope/app.json5
@@ -14,7 +14,7 @@
  */
 {
   "app": {
-    "bundleName": "com.samples.navigation",
+    "bundleName": "com.samples.navigationsample",
     "vendor": "example",
     "versionCode": 1000000,
     "versionName": "1.0.0",
