DialogProject工程 popup模块和menu模块提交
Signed-off-by: tianlongdevcode <tianlong18@h-partners.com>

--- a/code/DocsSample/ArkUISample/DialogProject/entry/src/main/module.json5
+++ b/code/DocsSample/ArkUISample/DialogProject/entry/src/main/module.json5
@@ -61,6 +61,13 @@
           }
         ]
       }
-    ]
+    ],
+    // [Start menu_permissions]
+    "requestPermissions": [
+      {
+        "name": "ohos.permission.VIBRATE",
+      }
+    ],
+    // [End menu_permissions]
   }
 }
