显示图片 (Image)  同源 Signed-off-by: <tianlong18@h-partners.com>

--- a/code/DocsSample/ArkUISample/ImageComponent/build-profile.json5
+++ b/code/DocsSample/ArkUISample/ImageComponent/build-profile.json5
@@ -12,16 +12,14 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
 {
   "app": {
-    "signingConfigs": [
-    ],
+    "signingConfigs": [],
     "products": [
       {
         "name": "default",
         "signingConfig": "default",
-        "compileSdkVersion": 14,
+        "compileSdkVersion": 20,
         "compatibleSdkVersion": 14,
         "targetSdkVersion": 14,
         "runtimeOS": "OpenHarmony",
