--- a/code/DocsSample/ArkUISample/ImageComponent/entry/src/main/module.json5
+++ b/code/DocsSample/ArkUISample/ImageComponent/entry/src/main/module.json5
@@ -20,8 +20,7 @@
     "description": "$string:module_desc",
     "mainElement": "EntryAbility",
     "deviceTypes": [
-      "default",
-      "tablet"
+      "default"
     ],
     "deliveryWithInstall": true,
     "installationFree": false,
@@ -61,6 +60,7 @@
           }
         ]
       }
-    ]
+    ],
+    requestPermissions: [{"name": 'ohos.permission.INTERNET'}]
   }
 }
