--- a/code/BasicFeature/Graphics/Graphics3d/hvigor/hvigor-config.json5
+++ b/code/BasicFeature/Graphics/Graphics3d/hvigor/hvigor-config.json5
@@ -1,7 +1,6 @@
 {
-  "hvigorVersion": "4.0.2",
+  "modelVersion": "5.0.5",
   "dependencies": {
-    "@ohos/hvigor-ohos-plugin": "4.0.2"
   },
   "execution": {
     // "daemon": true,                          /* Enable daemon compilation. Default: true */
