--- a/code/BasicFeature/Graphics/Graphics3d/oh-package.json5
+++ b/code/BasicFeature/Graphics/Graphics3d/oh-package.json5
@@ -14,6 +14,7 @@
  */
 
 {
+  "modelVersion": "5.0.5",
   "name": "graphics3d",
   "version": "1.0.0",
   "description": "Please describe the basic information.",
