--- a/code/DocsSample/ArkUISample/EventProject/build-profile.json5
+++ b/code/DocsSample/ArkUISample/EventProject/build-profile.json5
@@ -15,12 +15,13 @@
 
 {
   "app": {
-    "signingConfigs": [],
+    "signingConfigs": [
+    ],
     "products": [
       {
         "name": "default",
         "signingConfig": "default",
-        "compileSdkVersion": 20,
+        "compileSdkVersion": 22,
         "compatibleSdkVersion": 20,
         "targetSdkVersion": 20,
         "runtimeOS": "OpenHarmony",
@@ -34,7 +35,7 @@
     ],
     "buildModeSet": [
       {
-        "name": "debug"
+        "name": "debug",
       },
       {
         "name": "release"
