--- a/code/DocsSample/ArkUISample/NavigationSample/entry/src/main/module.json5
+++ b/code/DocsSample/ArkUISample/NavigationSample/entry/src/main/module.json5
@@ -20,7 +20,9 @@
     "type": "entry",
     "description": "$string:module_desc",
     "mainElement": "EntryAbility",
-    "deviceTypes": [],
+    "deviceTypes": [
+      "default"
+    ],
     "deliveryWithInstall": true,
     "installationFree": false,
     "pages": "$profile:main_pages",
