--- a/code/DocsSample/ArkUISample/NavigationSample/entry/src/ohosTest/module.json5
+++ b/code/DocsSample/ArkUISample/NavigationSample/entry/src/ohosTest/module.json5
@@ -16,7 +16,9 @@
   "module": {
     "name": "entry_test",
     "type": "feature",
-    "deviceTypes": [],
+    "deviceTypes": [
+      "default"
+    ],
     "deliveryWithInstall": true,
     "installationFree": false
   }
