Custom Component Freeze Function
Signed-off-by: tianlongdevcode <tianlong18@h-partners.com>

--- a/code/DocsSample/ArkUISample/FreezeV2/AppScope/app.json5
+++ b/code/DocsSample/ArkUISample/FreezeV2/AppScope/app.json5
@@ -14,7 +14,7 @@
  */
 {
   "app": {
-    "bundleName": "com.samples.reusablev2",
+    "bundleName": "com.samples.freezev2",
     "vendor": "example",
     "versionCode": 1000000,
     "versionName": "1.0.0",
