--- a/code/DocsSample/ArkUISample/StyledStringNDK/entry/src/ohosTest/module.json5
+++ b/code/DocsSample/ArkUISample/StyledStringNDK/entry/src/ohosTest/module.json5
@@ -16,7 +16,31 @@
   "module": {
     "name": "entry_test",
     "type": "feature",
-    "deviceTypes": [],
+    "deviceTypes": [
+      "default"
+    ],
+    "abilities": [
+      {
+        "name": "TestAbility",
+        "srcEntry": "./ets/testability/TestAbility.ets",
+        "description": "$string:TestAbility_desc",
+        "icon": "$media:icon",
+        "label": "$string:TestAbility_label",
+        "exported": true,
+        "startWindowIcon": "$media:icon",
+        "startWindowBackground": "$color:start_window_background",
+        "skills": [
+          {
+            "actions": [
+              "action.system.home"
+            ],
+            "entities": [
+              "entity.system.home"
+            ]
+          }
+        ]
+      }
+    ],
     "deliveryWithInstall": true,
     "installationFree": false
   }
