Add lineHeight and lineSpacing guideline sample for ts
Signed-off-by: FTL1ght <zhangyubao@h-partners.com>

--- a/code/DocsSample/graphic/ArkGraphics2D/ComplexTextDrawing/build-profile.json5
+++ b/code/DocsSample/graphic/ArkGraphics2D/ComplexTextDrawing/build-profile.json5
@@ -19,9 +19,10 @@
       {
         "name": "default",
         "signingConfig": "default",
-        "compileSdkVersion": 20,
-        "compatibleSdkVersion": 20,
-        "runtimeOS": "OpenHarmony"
+        "compileSdkVersion": 22,
+        "compatibleSdkVersion": 22,
+        "runtimeOS": "OpenHarmony",
+        "targetSdkVersion": 22
       }
     ],
     "buildModeSet": [
