--- a/code/BasicFeature/DeviceManagement/Vibrator/VibratorCapiSamples/build-profile.json5
+++ b/code/BasicFeature/DeviceManagement/Vibrator/VibratorCapiSamples/build-profile.json5
@@ -20,9 +20,10 @@
       {
         "name": "default",
         "signingConfig": "default",
-        "targetSdkVersion": "6.0.0(20)",
-        "compatibleSdkVersion": "6.0.0(20)",
-        "runtimeOS": "HarmonyOS",
+        "compileSdkVersion": 20,
+        "compatibleSdkVersion": 20,
+        "targetSdkVersion": 20,
+        "runtimeOS": "OpenHarmony",
         "buildOption": {
           "nativeCompiler": "BiSheng",
           "strictMode": {
