IssueNo: #6807:https://gitcode.com/openharmony/applications_app_samples/issues/6807 Description: UIAbility示例代码-解决引用标签和忽略标签不匹配的问题 Sig: SIG_Sample Feature or Bugfix: Bugfix Binary Source: No
Signed-off-by: liuhan <liuhan77@h-partners.com>
Signed-off-by: LLDawn <liuhan77@h-partners.com>

--- a/code/DocsSample/Ability/UIAbilityInteraction/entry/src/main/module.json5
+++ b/code/DocsSample/Ability/UIAbilityInteraction/entry/src/main/module.json5
@@ -13,8 +13,10 @@
  * limitations under the License.
  */
 
+// [Start routerMap]
 {
   "module": {
+    // [StartExclude routerMap]
     "name": "entry",
     "type": "entry",
     "description": "$string:module_desc",
@@ -26,7 +28,9 @@
     "deliveryWithInstall": true,
     "installationFree": false,
     "pages": "$profile:main_pages",
+    // [EndExclude routerMap]
     "routerMap": "$profile:router_map",
+    // [StartExclude routerMap]
     "abilities": [
       {
         "name": "EntryAbility",
@@ -164,6 +168,8 @@
       {
         "name": "ohos.permission.START_ABILITIES_FROM_BACKGROUND"
       }
-    ]
+    ],
+    // [EndExclude routerMap]
   }
 }
+// [End routerMap]
