--- a/code/DocsSample/PerformanceAnalysisKit/HiDebugTool/AppScope/app.json5
+++ b/code/DocsSample/PerformanceAnalysisKit/HiDebugTool/AppScope/app.json5
@@ -19,7 +19,7 @@
     "vendor": "example",
     "versionCode": 1000000,
     "versionName": "1.0.0",
-    "icon": "$media:app_icon",
+    "icon": "$media:layered_image",
     "label": "$string:app_name"
   }
 }
