--- a/code/DocsSample/Form/FormStandaloneDemo/entry/src/main/module.json5
+++ b/code/DocsSample/Form/FormStandaloneDemo/entry/src/main/module.json5
@@ -65,7 +65,7 @@
         ]
       }
     ],
-    "formWidgetModule": "library", // 只在独立卡片包形态中会使用，用来关联卡片包模块。
+    "formWidgetModule": "library" // 只在独立卡片包形态中会使用，用来关联卡片包模块。
   }
 }
 // [End module_config_formCreate]
