--- a/code/DocsSample/CoreFile/FileBackupExtension/build-profile.json5
+++ b/code/DocsSample/CoreFile/FileBackupExtension/build-profile.json5
@@ -15,14 +15,14 @@
 
 {
   "app": {
+    "signingConfigs": [],
     "products": [
       {
         "name": "default",
         "signingConfig": "default",
-        "compileSdkVersion": 14,
-        "targetSdkVersion": 14,
-        "compatibleSdkVersion": 14,
-        "runtimeOS": "OpenHarmony",
+        "targetSdkVersion": "6.0.0(20)",
+        "compatibleSdkVersion": "6.0.0(20)",
+        "runtimeOS": "HarmonyOS",
         "buildOption": {
           "strictMode": {
             "caseSensitiveCheck": true,
@@ -33,12 +33,12 @@
     ],
     "buildModeSet": [
       {
-        "name": "debug"
+        "name": "debug",
       },
       {
         "name": "release"
       }
-    ],
+    ]
   },
   "modules": [
     {
