--- a/code/DocsSample/CoreFile/UserFile/UserFileURI/build-profile.json5
+++ b/code/DocsSample/CoreFile/UserFile/UserFileURI/build-profile.json5
@@ -15,25 +15,18 @@
 
 {
   "app": {
+    "signingConfigs": [],
     "products": [
       {
         "name": "default",
         "signingConfig": "default",
-        "compileSdkVersion": 16,
-        "targetSdkVersion": 16,
-        "compatibleSdkVersion": 16,
-        "runtimeOS": "OpenHarmony",
+        "targetSdkVersion": "6.0.0(20)",
+        "compatibleSdkVersion": "6.0.0(20)",
+        "runtimeOS": "HarmonyOS",
         "buildOption": {
-          "externalNativeOptions": {
-            "abiFilters": [
-              "arm64-v8a",
-              "x86_64"
-            ],
-            "abiFilters": [
-              "arm64-v8a",
-              "x86_64",
-              "armeabi-v7a"
-            ],
+          "strictMode": {
+            "caseSensitiveCheck": true,
+            "useNormalizedOHMUrl": true
           }
         }
       }
