IssueNo: #I56EH7:https://gitcode.com/openharmony/applications_app_samples/issues/6924 Description:  修改遗留问题 Sig: SIG_Sample Feature or Bugfix: Feature Binary Source: No
Signed-off-by: huyingtao <liuhan77@h-partners.com>

--- a/code/DocsSample/ArkWeb/ArkWebPictureInPicture/entry/src/main/module.json5
+++ b/code/DocsSample/ArkWeb/ArkWebPictureInPicture/entry/src/main/module.json5
@@ -20,7 +20,7 @@
     "description": "$string:module_desc",
     "mainElement": "EntryAbility",
     "deviceTypes": [
-      "phone"
+      "default"
     ],
     "deliveryWithInstall": true,
     "installationFree": false,
