--- a/code/DocsSample/ArkWeb/WebScrollDemo/entry/src/main/module.json5
+++ b/code/DocsSample/ArkWeb/WebScrollDemo/entry/src/main/module.json5
@@ -18,7 +18,9 @@
     "type": "entry",
     "description": "$string:module_desc",
     "mainElement": "EntryAbility",
-    "deviceTypes": [],
+    "deviceTypes": [
+      "default"
+    ],
     "deliveryWithInstall": true,
     "installationFree": false,
     "pages": "$profile:main_pages",
