修改文件名和对应的类名不一致的问题
Signed-off-by: tianlongdevcode <tianlong18@h-partners.com>

--- a/code/DocsSample/Ability/StartAbility/entry/src/main/module.json5
+++ b/code/DocsSample/Ability/StartAbility/entry/src/main/module.json5
@@ -344,9 +344,9 @@
     // [StartExclude navitation_config]
     "extensionAbilities": [
       {
-        "name": "ExamplePhotoEditorAbility",
+        "name": "PhotoEditorAbility",
         "icon": "$media:layered_image",
-        "description": "ExamplePhotoEditorAbility",
+        "description": "PhotoEditorAbility",
         "type": "photoEditor",
         "exported": true,
         "srcEntry": "./ets/entryability/PhotoEditorAbility.ets",
