canvas工程增加module.json5的配置
Signed-off-by: tianlongdevcode <tianlong18@h-partners.com>

--- a/code/DocsSample/ArkUISample/CustomCanvas/entry/build-profile.json5
+++ b/code/DocsSample/ArkUISample/CustomCanvas/entry/build-profile.json5
@@ -17,7 +17,7 @@
   "buildOption": {
     "resOptions": {
       "copyCodeResource": {
-        "enable": false
+        "enable": true
       }
     }
   },
