IssueNo: #6964:https://gitcode.com/openharmony/applications_app_samples/issues/6964 Description: 追加修改元能力UIServiceExtensionAbility、EmbeddedUIExtensionAbility等sample同源 Sig: SIG_Sample Feature or Bugfix: Bugfix Binary Source: No
Signed-off-by: liuhan <liuhan77@h-partners.com>
Signed-off-by: LLDawn <liuhan075@chinasoftinc.com>

--- a/code/DocsSample/Ability/AbilityStage/entry/src/ohosTest/module.json5
+++ b/code/DocsSample/Ability/AbilityStage/entry/src/ohosTest/module.json5
@@ -16,7 +16,11 @@
   "module": {
     "name": "entry_test",
     "type": "feature",
-    "deviceTypes": [],
+    "deviceTypes": [
+      "phone",
+      "2in1",
+      "tablet"
+    ],
     "deliveryWithInstall": true,
     "installationFree": false
   }
