--- a/code/DocsSample/Ability/EmbeddedUIExtensionAbility/entry/src/main/module.json5
+++ b/code/DocsSample/Ability/EmbeddedUIExtensionAbility/entry/src/main/module.json5
@@ -20,7 +20,10 @@
     "type": "entry",
     "description": "$string:module_desc",
     "mainElement": "EntryAbility",
-    "deviceTypes": [],
+    "deviceTypes": [
+      "2in1",
+      "tablet"
+    ],
     "deliveryWithInstall": true,
     "installationFree": false,
     "pages": "$profile:main_pages",
