--- a/code/DocsSample/Ability/ApplicationContextDemo/entry/src/ohosTest/module.json5
+++ b/code/DocsSample/Ability/ApplicationContextDemo/entry/src/ohosTest/module.json5
@@ -16,7 +16,11 @@
   "module": {
     "name": "entry_test",
     "type": "feature",
-    "deviceTypes": [],
+    "deviceTypes": [
+      "phone",
+      "2in1",
+      "tablet"
+    ],
     "deliveryWithInstall": true,
     "installationFree": false
   }
