IssueNo: #6977:https://gitcode.com/openharmony/applications_app_samples/issues/6977 Description: UIAbility示例代码-解决类名文件名不一致的问题 Sig: SIG_Sample Feature or Bugfix: Bugfix Binary Source: No
Signed-off-by: liuhan <liuhan77@h-partners.com>
Signed-off-by: LLDawn <liuhan77@h-partners.com>

--- a/code/DocsSample/Ability/UIAbilityLaunchType/entry/src/main/module.json5
+++ b/code/DocsSample/Ability/UIAbilityLaunchType/entry/src/main/module.json5
@@ -20,9 +20,7 @@
     "mainElement": "EntryAbility",
     "srcEntry": "./ets/abilitystage/MyAbilityStage.ets",
     "deviceTypes": [
-      "phone",
-      "tablet",
-      "2in1"
+      "phone"
     ],
     "deliveryWithInstall": true,
     "installationFree": false,
